--- a/Assignment.html
+++ b/Assignment.html
@@ -6,6 +6,16 @@
 	</head>
 	
 	<body>
+	
+	<p>
+	
+		<h1> Hi, this</h1>
+		<h2> is my</h2>
+		<h3> first paragrapgh</h3>
+	
+	</P>
+	
+	
 	</body>
 	
 	
