--- a/Assignment.html
+++ b/Assignment.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<title>This is my first title</title>
-		<meta> charset = "utf-8">
+		<meta charset = "utf-8">
 	</head>
 	
 	<body>
