--- a/Assignment.html
+++ b/Assignment.html
@@ -5,18 +5,26 @@
 		<meta charset = "utf-8">
 	</head>
 	
-	<body>
+		<body>
 	
-	<p>
+		<p>
 	
-		<h1> Hi, this</h1>
-		<h2> is my</h2>
-		<h3> first paragrapgh</h3>
+			<h1> Hi, this</h1>
+			<h2> is my</h2>
+			<h3> first paragrapgh</h3>
 	
-	</P>
+		</P>
 	
+	
+		<main>
+	
+		</main>
+	
+		<img></img>
 	
 	</body>
 	
 	
+	
+	<footer>The author of this page is Matthew Clark</footer>
 </html>
