--- a/DogFile.html
+++ b/DogFile.html
@@ -10,7 +10,7 @@
 		
 <body>
 
-	<img src="GermanShepherd.jpg" alt="German Shepherd" height=500 width =600>
+	<img src="C:\Users\Matt\OneDrive\Desktop\Website\Images\GermanShepherd.jpg" alt="German Shepherd" height=500 width =600>
 
 </body>
 
