--- a/Assignment.html
+++ b/Assignment.html
@@ -16,7 +16,7 @@
 		</P>
 		
 			<a href="DogFile.html">German Shepherd Image</a>
-	
+			<a href="https://cdn.shopify.com/s/files/1/3004/0252/products/GummyBears_1024x1024.jpg?v=1586810380"<To any instructor viewing this...buy these, they are really good</a>
 		<main>
 	
 		</main>
