--- a/Dog_Video.html
+++ b/Dog_Video.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 	<head>
-		<title>German Sheperd video"</head>
+		<title>German Sheperd video"</title>
 		<meta charset="utf-8">
 	</head>	
 
