--- a/Assignment.html
+++ b/Assignment.html
@@ -15,15 +15,19 @@
 	
 		</P>
 		
-			<a href="DogFile.html">German Shepherd Image</a>
+		
 			<nav>
 				<a href="https://cdn.shopify.com/s/files/1/3004/0252/products/GummyBears_1024x1024.jpg?v=1586810380">To any instructor viewing this...buy these, they are really good </a>
+				<a href="C:\Users\Matt\OneDrive\Documents\GitHub\HTML-and-CSS-Projects\Assignment.html">Home</a> |
+				<a href="C:\Users\Matt\OneDrive\Documents\GitHub\HTML-and-CSS-Projects\DogFile.html">Dog Picture</a> |
+				<a href="https://www.youtube.com/watch?v=B7SXB40g5ag">Dog Video</a> |
 			</nav>
+		
 		<main>
-	
 		</main>
 	
-		<img></img>
+		<img>
+		</img>
 	
 	</body>
 	
