--- a/DogFile.html
+++ b/DogFile.html
@@ -9,7 +9,13 @@
 	
 		
 <body>
-
+	
+	<nav>
+		<a href="C:\Users\Matt\OneDrive\Documents\GitHub\HTML-and-CSS-Projects\Assignment.html">Home</a> |
+		<a href="C:\Users\Matt\OneDrive\Documents\GitHub\HTML-and-CSS-Projects\DogFile.html">Dog Picture</a> |
+		<a href="https://www.youtube.com/watch?v=B7SXB40g5ag">Dog Video</a> |
+	</nav>
+	
 	<img src="C:\Users\Matt\OneDrive\Desktop\Website\Images\GermanShepherd.jpg" alt="German Shepherd" height=500 width =600>
 
 </body>
