--- a/Dog_Video.html
+++ b/Dog_Video.html
@@ -13,7 +13,7 @@
 			
 	 		<a href="C:\Users\Matt\OneDrive\Documents\GitHub\HTML-and-CSS-Projects\Assignment.html">Home</a> |
 			<a href="C:\Users\Matt\OneDrive\Documents\GitHub\HTML-and-CSS-Projects\DogFile.html">Dog Picture</a> |
-			
+			<a href="C:\Users\Matt\OneDrive\Documents\GitHub\HTML-and-CSS-Projects\Dog_Video.html">Dog Video</a> |
 		</nav>
 	
 	
