--- a/Assignment.html
+++ b/Assignment.html
@@ -7,9 +7,10 @@
 	
 		<body>
 	
-			<blockquote>
+			<p>Here is a quote from developer.mozilla.org's website:</p>
+			<blockquote cite="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/blockquote">
 				<p>
-					The <blockquote> HTML element indicates that the enclosed text is an extended quotation
+					 The HTML element indicates that the enclosed text is an extended quotation
 				</p>
 			</blockquote>
 			
