--- a/Dog_Video.html
+++ b/Dog_Video.html
@@ -19,6 +19,8 @@
 	
 		<a href="https://www.youtube.com/watch?v=B7SXB40g5ag">Dog Video</a> |
 		
+		
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/B7SXB40g5ag" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</body>
 
 
