--- a/HTML Documents/Assignment.html
+++ b/HTML Documents/Assignment.html
@@ -25,9 +25,9 @@
 		
 			<nav>
 				<a href="https://cdn.shopify.com/s/files/1/3004/0252/products/GummyBears_1024x1024.jpg?v=1586810380">To any instructor viewing this...buy these, they are really good </a> |
-				<a href="C:\Users\Matt\OneDrive\Documents\GitHub\HTML-and-CSS-Projects\Assignment.html">Home</a> |
-				<a href="C:\Users\Matt\OneDrive\Documents\GitHub\HTML-and-CSS-Projects\DogFile.html">Dog Picture</a> |
-				<a href="C:\Users\Matt\OneDrive\Documents\GitHub\HTML-and-CSS-Projects\Dog_Video.html">Dog Video</a> |
+				<a href="Assignment.html">Home</a> |
+				<a href="DogFile.html">Dog Picture</a> |
+				<a href="Dog_Video.html">Dog Video</a> |
 			</nav>
 		
 		<main>
