--- a/HTML Documents/DogFile.html
+++ b/HTML Documents/DogFile.html
@@ -11,9 +11,9 @@
 <body>
 	
 	<nav>
-		<a href="C:\Users\Matt\OneDrive\Documents\GitHub\HTML-and-CSS-Projects\Assignment.html">Home</a> |
-		<a href="C:\Users\Matt\OneDrive\Documents\GitHub\HTML-and-CSS-Projects\DogFile.html">Dog Picture</a> |
-		<a href="C:\Users\Matt\OneDrive\Documents\GitHub\HTML-and-CSS-Projects\Dog_Video.html">Dog Video</a> |
+		<a href="Assignment.html">Home</a> |
+		<a href="DogFile.html">Dog Picture</a> |
+		<a href="Dog_Video.html">Dog Video</a> |
 	</nav>
 	
 	<img src="C:\Users\Matt\OneDrive\Desktop\Website\Images\GermanShepherd.jpg" alt="German Shepherd" height=500 width =600>
