--- a/Basic_HTML_and_Javascript_1/Basic_html_1.html
+++ b/Basic_HTML_and_Javascript_1/Basic_html_1.html
@@ -2,10 +2,14 @@
 
 <html>
 
+	<body>
+		<script src="Basic_Javascipt_1.js"></script>
 
-<script src="Basic_Javascipt_1.js"></script>
-
-
-
+		<p><font color = "green"> <b>This</b> <i>is my first</i> <u>paragraph using font</u></font><p>
+		<p><font color = "C6B419"> This is my second paragraph using hex for font</font></p>
+			
+	</body>
+	
+	<img sc="GermanShepherd.jpg" alt="This is a picture of a German Shelpherd">
 
 </html>
