--- a/Basic_HTML_and_Javascript_1/Basic_html_1.html
+++ b/Basic_HTML_and_Javascript_1/Basic_html_1.html
@@ -10,6 +10,6 @@
 			
 	</body>
 	
-	<img src="C:\Users\Matt\OneDrive\Desktop\Website\Images\GermanShepherd.jpg" alt="This is a picture of a German Shelpherd">
+	<img src="GermanShepherd.jpg" alt="This is a picture of a German Shelpherd">
 
 </html>
