--- a/Basic_HTML_and_CSS/HTML_Lists.html
+++ b/Basic_HTML_and_CSS/HTML_Lists.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 
 <html>
+    
+    <link rel="stylesheet" type="text/css" href="./CSS_List.css">
     <body>
         <ol>
             <li> bread</li>
