--- a/One_Page_Website/Index.html
+++ b/One_Page_Website/Index.html
@@ -195,9 +195,9 @@
 
 
         <!--Footer-->
-        <div>
+        <footer>
             www.RITtigersPaintball.Play &nbsp;|&nbsp; 2016
-        </div>
+        </footer>
         <!--End Footer-->
 
        
