--- a/One_Page_Website/Index.html
+++ b/One_Page_Website/Index.html
@@ -47,7 +47,7 @@
                                    
                                     <h1>Dive Into Our Past</h1>
                                     <div class="center">
-                                        <iframe width="700" height="400" src="https://www.youtube.com/embed/TQBShtSxT_0" 
+                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/DLxQM4D1fik" 
                                         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                                         </iframe>
                                     </div>
