--- a/One_Page_Website/Index.html
+++ b/One_Page_Website/Index.html
@@ -11,12 +11,12 @@
 
        <!--Navigation-->
        <div>
-            <div>
+            <div class="center">
                 <UL>
-                    <a href="#Home" id="link"><Li>Home</Li></a>
-                    <a href="#TimeLine" id="link"><li>Time Line</li></a>
-                    <a href="#About" id="link"><li>About</li></a>
-                    <a href="#Donate" id="link"><li>Donate</li></a>
+                    <a href="#Home" id="link">Home</a> |
+                    <a href="#TimeLine" id="link">Time Line</a> | 
+                    <a href="#About" id="link">About</a> |
+                    <a href="#Donate" id="link">Donate</a> 
                 </UL>
             </div>
        </div>
