--- a/Paintball Site/Home.html
+++ b/Paintball Site/Home.html
@@ -5,7 +5,7 @@
     <head>
         <title>RIT Team Page </title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="../One_Page_Website/CSS/Tigers_Page_CSS.css">
+        <link rel="stylesheet" href="./PaintballSite.css">
     </head>
     <body>
 
