--- a/Paintball Site/TimeLine.html
+++ b/Paintball Site/TimeLine.html
@@ -4,8 +4,8 @@
 <!DOCTYPE html>
 
 <body>
-    <link rel="stylesheet" href="../One_Page_Website/CSS/Tigers_Page_CSS.css">
-        <div >    
+    <link rel="stylesheet" href="./PaintballSite.css">
+        <div class="Background2">    
             <section>  
                 <div id="TimeLine" >
                         <h1>Dive Into Our Past</h1>
