--- a/BasicHTML.html
+++ b/BasicHTML.html
@@ -12,5 +12,6 @@
         </header>
         <p>Introduction to basic HTML syntax.</p>
         <p>Addded another paragraph.</p>
+        <p>Added a third paragraph</p>
     </body>
 </html>
