--- a/Paintball Site/TimeLine.html
+++ b/Paintball Site/TimeLine.html
@@ -1,11 +1,13 @@
 <!--Time Line Page-->
-
-
 <!DOCTYPE html>
 
-<body>
+<html lang="en">
+
+
+<body class="Background2" >
     <link rel="stylesheet" href="./PaintballSite.css">
-        <div class="Background2">    
+        <!--<img src="./Images/Background1.jpg" alt="">-->
+        <div>    
             <section>  
                 <div id="TimeLine" >
                         <h1>Dive Into Our Past</h1>
@@ -18,3 +20,5 @@
             </section>
 
 </body>
+
+</html>
