--- a/Paintball Site/TimeLine.html
+++ b/Paintball Site/TimeLine.html
@@ -3,22 +3,42 @@
 
 <html lang="en">
 
+    <head>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="./PaintballSite.css">
+    </head>
+  
 
-<body class="Background2" >
-    <link rel="stylesheet" href="./PaintballSite.css">
-        <!--<img src="./Images/Background1.jpg" alt="">-->
-        <div>    
-            <section>  
-                <div id="TimeLine" >
-                        <h1>Dive Into Our Past</h1>
-                        <div class="center">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/DLxQM4D1fik" 
-                            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-                            </iframe>
-                        </div>
-                </div>   
-            </section>
 
-</body>
+
+    <body class="Background2" >
+        
+            <!--<img src="./Images/Background1.jpg" alt="">-->
+            <div>    
+                <section>  
+                    <div id="TimeLine" >
+                            <h1>Dive Into Our Past</h1>
+                            <div class="center">
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/DLxQM4D1fik" 
+                                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                                </iframe>
+                            </div>
+                    </div>   
+                </section>
+
+
+                <div>
+                    <div class="center">
+                        <UL>
+                            <a href="Home" id="link">Home</a> |
+                            <a href="TimeLine.html" id="link">Time Line</a> | 
+                            <a href="About" id="link">About</a> |
+                            <a href="Donate" id="link">Donate</a> 
+                        </UL>
+                    </div>
+               </div>
+
+
+    </body>
 
 </html>
