--- a/Paintball Site/TimeLine.html
+++ b/Paintball Site/TimeLine.html
@@ -10,10 +10,8 @@
   
 
 
-
+<!--Background with embedded video-->
     <body class="Background2" >
-        
-            <!--<img src="./Images/Background1.jpg" alt="">-->
             <div>    
                 <section>  
                     <div id="TimeLine" >
@@ -25,19 +23,20 @@
                             </div>
                     </div>   
                 </section>
+<!-- End Background with embedded video-->
 
-
+<!--Navigation-->
                 <div>
                     <div class="center">
                         <UL>
-                            <a href="Home" id="link">Home</a> |
-                            <a href="TimeLine.html" id="link">Time Line</a> | 
+                            <a href="Home.html" id="link">Home</a> |
+                            <!--<a href="TimeLine.html" id="link">Time Line</a> | -->
                             <a href="About" id="link">About</a> |
                             <a href="Donate" id="link">Donate</a> 
                         </UL>
                     </div>
                </div>
-
+<!--End Navigation-->
 
     </body>
 
