--- a/Project/Basic_css_demo_1.html
+++ b/Project/Basic_css_demo_1.html
@@ -5,6 +5,7 @@
     <head>
         <meta charset="utf-8">
         <title>Basic HTML Template</title>
+        <link rel="stylesheet" href="Basic_style.css">
     </head>
     <body>
 
@@ -13,19 +14,19 @@
         </div>
 
         <div class="container">
-            <div classs="squares">
+            <div class="squares">
                 <p>Box 1</p>
             </div>
 
-            <div classs="squares">
+            <div class="squares">
                 <p>Box 2</p>
             </div>
 
-            <div classs="squares">
+            <div class="squares">
                 <p>Box 3</p>
             </div>
 
-            <div classs="squares">
+            <div class="squares">
                 <p>Box 4</p>
             </div>
 
