--- a/Project/photo-package.html
+++ b/Project/photo-package.html
@@ -13,8 +13,8 @@
     <body>
             <div class="photo-container">
                 <div class="photo">
-                    <img src="thumbnail2.png" alt="">
-                    <div class="phot-overlay">
+                    <img src="./Icons/icons3.png" alt="">
+                    <div class="photo-overlay">
                         <h3 class="white-head"> Click to Enlarge</h3>
                         <p>We have several space launches departing daily, book your flight today!</p>
                     </div>
