--- a/Project/photo-package.html
+++ b/Project/photo-package.html
@@ -7,16 +7,33 @@
     <head>
         <title> The Space Station</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="./photo_style.css">
+        <link rel="stylesheet" href="../Paintball Site/ImageManipTest.css"> 
     </head>
 
     <body>
             <div class="photo-container">
                 <div class="photo">
-                    <img src="./Icons/icons3.png" alt="">
+                    <img src="../Paintball Site/Images/aline_1st place old.jpg" alt="">
                     <div class="photo-overlay">
-                        <h3 class="white-head"> Click to Enlarge</h3>
-                        <p>We have several space launches departing daily, book your flight today!</p>
+                        <h3 class="white-head"> Time Line</h3> 
+                    </div>
+                </div>
+            </div>
+
+            <div class="photo-container">
+                <div class="photo">
+                    <img src="../Paintball Site/Images/Natty_3rd_Place.jpg" alt="">
+                    <div class="photo-overlay">
+                        <h3 class="white-head"> About</h3> 
+                    </div>
+                </div>
+            </div>
+
+            <div class="photo-container">
+                <div class="photo">
+                    <img src="../Paintball Site/Images/HB.jpg" alt="">
+                    <div class="photo-overlay">
+                        <h3 class="white-head"> Donate</h3> 
                     </div>
                 </div>
             </div>
