--- a/Project/Index.html
+++ b/Project/Index.html
@@ -4,8 +4,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="./shared.css">
+        <link rel="stylesheet" href="./animations.css">
     </head>
     <body>
  
@@ -14,9 +14,9 @@
         <div class="wrap">
             <div class="menu-container">
                 <ul>
-                    <a href="#home"><li>HOME</li>
-                    <a href="#gallery"><li>GALLARY</li>
-                    <a href="#contact"><li>RESERVATIONS</li>
+                    <a href="#home"><li>HOME</li></a>
+                    <a href="#gallery"><li>GALLARY</li></a>
+                    <a href="#contact"><li>RESERVATIONS</li></a>
                 </ul>
             </div>
         </div>    
@@ -40,7 +40,7 @@
                     <!-- PHOTO-CONTAINER 1 -->
                     <div class="photo-container">
                         <div class="photo">
-                            <img src="" alt="">
+                            <img src="./Images/thumbnail_1.png" alt="">
                             <div class="photo-overlay">
                                 <h3>Click to Enlarge</h3>
                                 <p>We have several space launches departing daily, book your flight today!</p>
@@ -53,7 +53,7 @@
                     <!-- PHOTO-CONTAINER 2 -->
                     <div class="photo-container">
                         <div class="photo">
-                            <img src="" alt="">
+                            <img src="./Images/thumbnail_2.png" alt="">
                             <div class="photo-overlay">
                                 <h3>Click to Enlarge</h3>
                                 <p>We have several space launches departing daily, book your flight today!</p>
@@ -65,7 +65,7 @@
                     <!-- PHOTO-CONTAINER 3 -->
                     <div class="photo-container">
                         <div class="photo">
-                            <img src="" alt="">
+                            <img src="./Images/thumbnail_3.png" alt="">
                             <div class="photo-overlay">
                                 <h3>Click to Enlarge</h3>
                                 <p>We have several space launches departing daily, book your flight today!</p>
@@ -77,7 +77,7 @@
                     <!-- PHOTO-CONTAINER 4 -->
                     <div class="photo-container">
                         <div class="photo">
-                            <img src="" alt="">
+                            <img src="./Images/thumbnail_4.png" alt="">
                             <div class="photo-overlay">
                                 <h3>Click to Enlarge</h3>
                                 <p>We have several space launches departing daily, book your flight today!</p>
@@ -89,7 +89,7 @@
                     <!-- PHOTO-CONTAINER 5 -->
                     <div class="photo-container">
                         <div class="photo">
-                            <img src="" alt="">
+                            <img src="./Images/thumbnail_5.png" alt="">
                             <div class="photo-overlay">
                                 <h3>Click to Enlarge</h3>
                                 <p>We have several space launches departing daily, book your flight today!</p>
@@ -101,7 +101,7 @@
                     <!-- PHOTO-CONTAINER 6 -->
                     <div class="photo-container">
                         <div class="photo">
-                            <img src="" alt="">
+                            <img src="./Images/thumbnail_6.png" alt="">
                             <div class="photo-overlay">
                                 <h3>Click to Enlarge</h3>
                                 <p>We have several space launches departing daily, book your flight today!</p>
@@ -113,7 +113,7 @@
                     <!-- PHOTO-CONTAINER 7 -->
                     <div class="photo-container">
                         <div class="photo">
-                            <img src="" alt="">
+                            <img src="./Images/thumbnail_7.png" alt="">
                             <div class="photo-overlay">
                                 <h3>Click to Enlarge</h3>
                                 <p>We have several space launches departing daily, book your flight today!</p>
@@ -125,7 +125,7 @@
                     <!-- PHOTO-CONTAINER 8 -->
                     <div class="photo-container">
                         <div class="photo">
-                            <img src="" alt="">
+                            <img src="./Images/thumbnail_8.png" alt="">
                             <div class="photo-overlay">
                                 <h3>Click to Enlarge</h3>
                                 <p>We have several space launches departing daily, book your flight today!</p>
@@ -137,7 +137,7 @@
                     <!-- PHOTO-CONTAINER 9 -->
                     <div class="photo-container">
                         <div class="photo">
-                            <img src="" alt="">
+                            <img src="./Images/thumbnail_9.png" alt="">
                             <div class="photo-overlay">
                                 <h3>Click to Enlarge</h3>
                                 <p>We have several space launches departing daily, book your flight today!</p>
