--- a/Project/photo-package.html
+++ b/Project/photo-package.html
@@ -5,12 +5,13 @@
 <html lang = "en">
 
     <head>
-        <title> The Space Station</title>
+        <title> Paintball titles</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="../Paintball Site/ImageManipTest.css"> 
     </head>
 
     <body>
+         <div class="container">  
             <div class="photo-container">
                 <div class="photo">
                     <img src="../Paintball Site/Images/aline_1st place old.jpg" alt="">
@@ -37,7 +38,7 @@
                     </div>
                 </div>
             </div>
-
+        </div>
     </body>
 
 
