--- a/Project/Index.html
+++ b/Project/Index.html
@@ -34,7 +34,7 @@
 
         <!-- GALLARY -->
         <section id="gallery">
-            <div>
+            <div class="container">
                 <h1>Gallery</h1>
                 <div class="flex-container">
                     <!-- PHOTO-CONTAINER 1 -->
@@ -65,7 +65,7 @@
                     <!-- PHOTO-CONTAINER 3 -->
                     <div class="photo-container">
                         <div class="photo">
-                            <img src="./Images/thumbnail_3.png" alt="">
+                            <img src="./Images/thumbnail_1.png" alt="">
                             <div class="photo-overlay">
                                 <h3>Click to Enlarge</h3>
                                 <p>We have several space launches departing daily, book your flight today!</p>
@@ -77,7 +77,7 @@
                     <!-- PHOTO-CONTAINER 4 -->
                     <div class="photo-container">
                         <div class="photo">
-                            <img src="./Images/thumbnail_4.png" alt="">
+                            <img src="./Images/thumbnail_2.png" alt="">
                             <div class="photo-overlay">
                                 <h3>Click to Enlarge</h3>
                                 <p>We have several space launches departing daily, book your flight today!</p>
@@ -89,7 +89,7 @@
                     <!-- PHOTO-CONTAINER 5 -->
                     <div class="photo-container">
                         <div class="photo">
-                            <img src="./Images/thumbnail_5.png" alt="">
+                            <img src="./Images/thumbnail_1.png" alt="">
                             <div class="photo-overlay">
                                 <h3>Click to Enlarge</h3>
                                 <p>We have several space launches departing daily, book your flight today!</p>
@@ -101,7 +101,7 @@
                     <!-- PHOTO-CONTAINER 6 -->
                     <div class="photo-container">
                         <div class="photo">
-                            <img src="./Images/thumbnail_6.png" alt="">
+                            <img src="./Images/thumbnail_2.png" alt="">
                             <div class="photo-overlay">
                                 <h3>Click to Enlarge</h3>
                                 <p>We have several space launches departing daily, book your flight today!</p>
@@ -113,7 +113,7 @@
                     <!-- PHOTO-CONTAINER 7 -->
                     <div class="photo-container">
                         <div class="photo">
-                            <img src="./Images/thumbnail_7.png" alt="">
+                            <img src="./Images/thumbnail_1.png" alt="">
                             <div class="photo-overlay">
                                 <h3>Click to Enlarge</h3>
                                 <p>We have several space launches departing daily, book your flight today!</p>
@@ -125,7 +125,7 @@
                     <!-- PHOTO-CONTAINER 8 -->
                     <div class="photo-container">
                         <div class="photo">
-                            <img src="./Images/thumbnail_8.png" alt="">
+                            <img src="./Images/thumbnail_2.png" alt="">
                             <div class="photo-overlay">
                                 <h3>Click to Enlarge</h3>
                                 <p>We have several space launches departing daily, book your flight today!</p>
@@ -137,7 +137,7 @@
                     <!-- PHOTO-CONTAINER 9 -->
                     <div class="photo-container">
                         <div class="photo">
-                            <img src="./Images/thumbnail_9.png" alt="">
+                            <img src="./Images/thumbnail_1.png" alt="">
                             <div class="photo-overlay">
                                 <h3>Click to Enlarge</h3>
                                 <p>We have several space launches departing daily, book your flight today!</p>
