--- a/Project/Index.html
+++ b/Project/Index.html
@@ -13,7 +13,7 @@
         <!-- NAV -->
         <div class="wrap">
             <div class="menu-container">
-                <ul>
+                <ul class="menu">
                     <a href="#home"><li>HOME</li></a>
                     <a href="#gallery"><li>GALLARY</li></a>
                     <a href="#contact"><li>RESERVATIONS</li></a>
@@ -42,7 +42,7 @@
                         <div class="photo">
                             <img src="./Images/thumbnail_1.png" alt="">
                             <div class="photo-overlay">
-                                <h3>Click to Enlarge</h3>
+                                <h3 class="white-head">Click to Enlarge</h3>
                                 <p>We have several space launches departing daily, book your flight today!</p>
                             </div>
                         </div>
@@ -55,7 +55,7 @@
                         <div class="photo">
                             <img src="./Images/thumbnail_2.png" alt="">
                             <div class="photo-overlay">
-                                <h3>Click to Enlarge</h3>
+                                <h3 class="white-head">Click to Enlarge</h3>
                                 <p>We have several space launches departing daily, book your flight today!</p>
                             </div>
                         </div>
@@ -67,7 +67,7 @@
                         <div class="photo">
                             <img src="./Images/thumbnail_1.png" alt="">
                             <div class="photo-overlay">
-                                <h3>Click to Enlarge</h3>
+                                <h3 class="white-head">Click to Enlarge</h3>
                                 <p>We have several space launches departing daily, book your flight today!</p>
                             </div>
                         </div>
@@ -79,7 +79,7 @@
                         <div class="photo">
                             <img src="./Images/thumbnail_2.png" alt="">
                             <div class="photo-overlay">
-                                <h3>Click to Enlarge</h3>
+                                <h3 class="white-head">Click to Enlarge</h3>
                                 <p>We have several space launches departing daily, book your flight today!</p>
                             </div>
                         </div>
@@ -91,7 +91,7 @@
                         <div class="photo">
                             <img src="./Images/thumbnail_1.png" alt="">
                             <div class="photo-overlay">
-                                <h3>Click to Enlarge</h3>
+                                <h3 class="white-head">Click to Enlarge</h3>
                                 <p>We have several space launches departing daily, book your flight today!</p>
                             </div>
                         </div>
@@ -103,7 +103,7 @@
                         <div class="photo">
                             <img src="./Images/thumbnail_2.png" alt="">
                             <div class="photo-overlay">
-                                <h3>Click to Enlarge</h3>
+                                <h3 class="white-head">Click to Enlarge</h3>
                                 <p>We have several space launches departing daily, book your flight today!</p>
                             </div>
                         </div>
@@ -115,7 +115,7 @@
                         <div class="photo">
                             <img src="./Images/thumbnail_1.png" alt="">
                             <div class="photo-overlay">
-                                <h3>Click to Enlarge</h3>
+                                <h3 class="white-head">Click to Enlarge</h3>
                                 <p>We have several space launches departing daily, book your flight today!</p>
                             </div>
                         </div>
@@ -127,7 +127,7 @@
                         <div class="photo">
                             <img src="./Images/thumbnail_2.png" alt="">
                             <div class="photo-overlay">
-                                <h3>Click to Enlarge</h3>
+                                <h3 class="white-head">Click to Enlarge</h3>
                                 <p>We have several space launches departing daily, book your flight today!</p>
                             </div>
                         </div>
@@ -139,7 +139,7 @@
                         <div class="photo">
                             <img src="./Images/thumbnail_1.png" alt="">
                             <div class="photo-overlay">
-                                <h3>Click to Enlarge</h3>
+                                <h3 class="white-head">Click to Enlarge</h3>
                                 <p>We have several space launches departing daily, book your flight today!</p>
                             </div>
                         </div>
