--- a/One_Page_Website/Index.html
+++ b/One_Page_Website/Index.html
@@ -5,7 +5,7 @@
     <head>
         <title>RIT Team Page </title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="CSS/Tigers_Page_CSS.css">
+        <link rel="stylesheet" href="./CSS/one_page_website.css">
     </head>
     <body>
 
