--- a/Paintball Site/TimeLine.html
+++ b/Paintball Site/TimeLine.html
@@ -47,7 +47,7 @@
                 <div>
                     <div class="center">
                         <UL>
-                            <a href="Home.html" id="link">Home</a> |
+                            <a href="./NewHome.html" id="link">Home</a> |
                             <!--<a href="TimeLine.html" id="link">Time Line</a> | -->
                             <a href="About" id="link">About</a> |
                             <a href="Donate" id="link">Donate</a> 
