--- a/Challenges/challenge_one.html
+++ b/Challenges/challenge_one.html
@@ -10,9 +10,9 @@
 
     <body>
         
-        
-        <img src="./Img/pdx.jpg" alt="" class="center">
-
+        <div class="center">
+            <img src="./Img/pdx.jpg" alt="">
+        </div>
 
 
 
