--- a/Challenges/challenge_one.html
+++ b/Challenges/challenge_one.html
@@ -5,13 +5,21 @@
 
     <head>
         <meta charset="utf-8">
-        <link href="./challenge_one.css">
+        <link rel="stylesheet" href="challenges.css">
     </head>
 
     <body>
         
-        <div class="center">
-            <img src="./Img/pdx.jpg" alt="">
+        <h1>Testing</h1>
+
+
+        <div class="container">
+            <img src="./Img/pdx.jpg" alt="" width="100%">  
+            <p class="bottom-left">Bottom Left</p>
+            <p class="top-left">Top Left</p>
+            <p class="top-right">Top Right</p>
+            <p class="bottom-right">Bottom Right</p>
+            <p class="centered">Centered</p>
         </div>
 
 
