Changed Website_Portfolio to index.html

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -34,7 +34,7 @@
 
         <!--Video text-->
         <div class="Video_Text">
-            <h1 class="white-text">Your Name's Portfolio</h1>
+            <h1 class="white-text">Matt's Portfolio!</h1>
             <strong>
                 <p class="center">
                     <q>The computer programmer is a creator of universes for which he alone is the lawgiver.
@@ -74,7 +74,7 @@
             <!--Left column-->
             
             <div class="Column_2">
-                <a href="https://github.com/the-tech-academy" target="_blank"><img src="./IMG/GitHub.png" alt="GitHub Logo"></a>
+                <a href="https://github.com/maty714" target="_blank"><img src="./IMG/GitHub.png" alt="GitHub Logo"></a>
             </div>
             <!--Right column-->
             <div class="Column_1">
