Added a new home page

--- a/Paintball Site/About Page/About.html
+++ b/Paintball Site/About Page/About.html
@@ -126,7 +126,7 @@
                             <img class="img-fluid" src="./img/HB_Win.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-name">2012</div>
                             </div>
                         </a>
                     </div>
@@ -135,7 +135,7 @@
                             <img class="img-fluid" src="./img/aline_1st place old.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-name">2013</div>
                             </div>
                         </a>
                     </div>
@@ -144,7 +144,7 @@
                             <img class="img-fluid" src="./img/NVP_OldKrew.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-name">2013</div>
                             </div>
                         </a>
                     </div>
@@ -153,7 +153,7 @@
                             <img class="img-fluid" src="./img/Team_Photo2.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-name">2013</div>
                             </div>
                         </a>
                     </div>
@@ -162,7 +162,7 @@
                             <img class="img-fluid" src="./img/Team_Photo_1st_Event.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-name">2016</div>
                             </div>
                         </a>
                     </div>
@@ -171,7 +171,7 @@
                             <img class="img-fluid" src="./img/Natty_3rd_Place.jpg" alt="..." />
                             <div class="portfolio-box-caption p-3">
                                 <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-name">2015</div>
                             </div>
                         </a>
                     </div>
